Comandos azure/analisis_audio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analisisaudio
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analisisaudio
  template:
    metadata:
      labels:
        app: analisisaudio
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: analisisaudio
        image: crabcall.azurecr.io/samples/analisisaudio:latest
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 150m
            memory: 300Mi
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: analisisaudio
  namespace: istio-system
spec:
  ports:
  - port: 9092
  selector:
    app: analisisaudio
