Comandos azure/rest api .yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-api
  template:
    metadata:
      labels:
        app: rest-api
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: rest-api
        image: crabcall.azurecr.io/samples/rest-api:latest
        resources:
          requests:
            cpu: 20m
            memory: 20Mi
          limits:
            cpu: 40m
            memory: 40Mi
        ports:
        - containerPort: 3000
          name: entrada
        - containerPort: 3306
          name: bd  
---
apiVersion: v1
kind: Service
metadata:
  name: rest-api
  namespace: abcall
spec:
  ports:
  - port: 3000
  selector:
    app: rest-api
