Comandos azure/analisisfraude.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analisisfraude
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analisisfraude
  template:
    metadata:
      labels:
        app: analisisfraude
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: analisisfraude
        image: crabcall.azurecr.io/samples/analisisfraude:latest
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 150m
            memory: 300Mi
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: analisisfraude
  namespace: istio-system
spec:
  ports:
  - port: 9092
  selector:
    app: analisisfraude   
---
cat <<EOF | kubectl apply -f -
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: analisisfraude-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 9092
      name: http-a
      protocol: HTTP
    hosts:
    - "analisisfraude.68.220.194.229.nip.io"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: analisisfraude-vs
  namespace: istio-system
spec:
  hosts:
  - "analisisfraude.68.220.194.229.nip.io"
  gateways:
  - analisisfraude-gateway
  http:
  - route:
    - destination:
        host: analisisfraude
        port:
          number: 9092
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: analisisfraude
  namespace: istio-system
spec:
  host: analisisfraude
  trafficPolicy:
    tls:
      mode: DISABLE
---
EOF
