Comandos azure/rest-api-factura.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-factura
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-api-factura
  template:
    metadata:
      labels:
        app: rest-api-factura
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: rest-api-factura
        image: crabcall.azurecr.io/samples/rest-api-factura:latest
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 150m
            memory: 250Mi
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: rest-api-factura
  namespace: istio-system
spec:
  ports:
  - port: 3003
  selector:
    app: rest-api-factura   
---
cat <<EOF | kubectl apply -f -
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: rest-api-factura-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-a
      protocol: HTTP
    hosts:
    - "rest-api-factura.68.220.194.229.nip.io"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: rest-api-factura-vs
  namespace: istio-system
spec:
  hosts:
  - "rest-api-factura.68.220.194.229.nip.io"
  gateways:
  - rest-api-factura-gateway
  http:
  - route:
    - destination:
        host: rest-api-factura
        port:
          number: 3003
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: rest-api-factura
  namespace: istio-system
spec:
  host: rest-api-factura
  trafficPolicy:
    tls:
      mode: DISABLE
---
EOF
